--- a/modules/table/locale/fr_FR.po
+++ b/modules/table/locale/fr_FR.po
@@ -18,7 +18,7 @@ msgctxt "error:table.manage_dimension.show_dimension_2:"
 msgid "The requested change might delete data."
 msgstr ""
 
-msgctxt "error:table.manage_dimension_3:"
+msgctxt "error:table.manage_dimension.show_dimension_3:"
 msgid "The requested change might delete data."
 msgstr ""
 
@@ -742,21 +742,21 @@ msgctxt ""
 msgid "View Data"
 msgstr "Visualisation des données"
 
-msgctxt "wizard_button:table.manage_dimension_3,dimension_management,apply_:"
+msgctxt "wizard_button:table.manage_dimension.show_dimension_3,dimension_management,apply_:"
 msgid "Apply"
 msgstr "Appliquer"
 
-msgctxt "wizard_button:table.manage_dimension_3,dimension_management,end:"
+msgctxt "wizard_button:table.manage_dimension.show_dimension_3,dimension_management,end:"
 msgid "Exit"
 msgstr "Fin"
 
 msgctxt ""
-"wizard_button:table.manage_dimension_3,dimension_management,next_dim:"
+"wizard_button:table.manage_dimension.show_dimension_3,dimension_management,next_dim:"
 msgid "Dimension 4"
 msgstr "Dimension 4"
 
 msgctxt ""
-"wizard_button:table.manage_dimension_3,dimension_management,view_data:"
+"wizard_button:table.manage_dimension.show_dimension_3,dimension_management,view_data:"
 msgid "View Data"
 msgstr "Visualisation des données"
 
